--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -196,7 +196,7 @@
   }
 
 
-  input{
+  input, textarea{
     background:none; //預設白底背景取消
     outline:none; //點選時出現的藍色外框線
     border: 1px solid #000;
