--- a/scss/pages/_sunglasses.scss
+++ b/scss/pages/_sunglasses.scss
@@ -33,10 +33,10 @@
             background-size: 100%;
         }
         .img-1{
-            background-image: url(../image/product-header-sm-3.png);
+            background-image: url("../image/product-header-sm-3.png");
         }
         .img-2{
-            background-image: url(../image/product-header-sm-4.png);
+            background-image: url("../image/product-header-sm-4.png");
          }
          img{
             opacity: 0;
