--- a/scss/all.scss
+++ b/scss/all.scss
@@ -2,7 +2,9 @@
 
 @import "meyerweb";
 @import "reset";
+@import "mixin";
 @import "base";
+
 @import "pages/index";
-@import "pages/sunglasses"
+@import "pages/sunglasses";
 
