--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,16 +4,17 @@
 .header{
   background: #AA0601;
   padding: 25px 36px;
-  @media (max-width:767px){
+  @include pad{
     padding: 0px;
   }
   .container{
     padding: 12px 0;
     display: flex;
     justify-content: space-between;
-    @media (max-width:767px){
+
+    @include mobile{
+      padding-bottom: 0;
       flex-direction: column;
-      padding: 0px;
     }
   }
   .menu{
@@ -21,20 +22,20 @@
     display: flex;
     align-items: center;
     gap: 64px; 
-    @media (max-width:767px){
+    @include mobile{
       flex-wrap: wrap;
       gap: 0px;
     }
   }
   li{
     text-align: center;
-    @media (max-width:767px){
+    @include mobile{
       width: 50%;
     }
   }
   img{
     width: 80px;
-    @media (max-width:767px){
+    @include mobile{
       margin: 16px;
     }
   }
@@ -44,12 +45,12 @@
     &:hover{
       color:#FBF2F2;
       text-decoration: underline;
-      @media (max-width:767px){
+      @include mobile{
       color: #AA0601;
       background: #fff;
       }
     }
-    @media (max-width:767px){
+    @include mobile{
       border: solid 1px #fff;
     }
 
@@ -62,7 +63,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding: 296px 0;
-  @media (max-width:767px){
+   @include mobile{
     padding: 144px 0;
   }
   .bn-text{
@@ -82,7 +83,7 @@
       color: #aa0601;;
     }
   }
-  @media (max-width:767px){
+  @include mobile{
     p{
       font-size: 16px;
     }
@@ -93,7 +94,7 @@
   .card{
     max-width: 306px;
     margin: 0 auto;
-    @media (max-width:767px){
+    @include mobile{
       max-width: 100%;
     }
   }
@@ -109,7 +110,7 @@
   .card{
     width: 30%;
   }
-  @media(max-width:992px){
+  @include pad{
     .card-list{
       flex-direction: column;
       align-items: center;
@@ -128,7 +129,7 @@
   .card-list{
     gap: 0px;
   }
-  @media(max-width:992px){
+  @include pad{
     .card-list{
       flex-direction: column;
       }
@@ -146,7 +147,7 @@
     overflow: cover;
     position: relative;
     flex-grow: 1;
-  }
+    }
   .card-text{
     padding: 16px;
     margin-bottom: 72px;
@@ -163,17 +164,16 @@
     left: 16px;
     bottom: 16px;
   }
-  @media(max-width:992px){
-    flex-wrap: wrap;
+  @include pad{
     .card{
        max-width: 47%;
     }
   }
-  @media(max-width:767px){
+  @include mobile{
     .card{
        max-width: 100%;
     }
-  }
+}
 }
 .contract{
   background:  #FBF2F2;
@@ -223,12 +223,15 @@
         width: 5%;
     }
   }
-  @media(max-width:992px){
+  @include pad{
     .wrap{
       padding: 0 60px;
       .contract-text{
       font-size: 16px;
       }
+      @include mobile{
+        padding: 0px;
+        }
     }
     input[type="submit"]{
      max-width: 100%;
@@ -239,7 +242,7 @@
   background: #AA0601;
   color: #fff;
   padding: 60px 0 32px 0;
-  @media(max-width: 767px){
+  @include mobile{
   padding: 24px 0px;
   }
   .navbar, .menu, .icon, .copyright{
@@ -249,25 +252,25 @@
   }
   .navbar{
     margin-bottom: 60px;
-    @media(max-width: 767px){
+    @include mobile{
       margin-bottom: -40px;
     }
   }
   .menu{
     gap: 48px;
-    @media(max-width:767px){
+    @include mobile{
       display: none;
     }
   }
   .icon{
     gap: 32px;
-    @media(max-width: 992px){
+    @include pad{
       gap: 16px;
       margin-left: auto;
     }
     img{
       max-width: 48px;
-      @media(max-width: 992px){
+      @include pad{
         max-width: 40px;
       }
     }
@@ -277,7 +280,7 @@
   }
   .tel, .mail{
     font-size: 36px;
-    @media(max-width: 767px){
+    @include mobile{
       font-size: 16px;
       margin-bottom: 8px;
     }
@@ -286,7 +289,7 @@
     margin-bottom: 8px;
   } 
   .mail{
-    @media(max-width: 767px){
+    @include mobile{
       margin-bottom: 24px;
       }
   }
@@ -295,7 +298,7 @@
     border-top: 1px solid #fff;
     margin-top: 32px;
     a{
-      display: block;
+      display: inline;
       &:hover{
         text-decoration: underline;
       }
@@ -306,10 +309,10 @@
     .mb-8{
       margin-bottom: 8px;
     }
-    @media(max-width: 767px){
+    @include mobile{
       display: block;
       margin-top: 16px;
-      p,span{
+      a,p,span{
         display: block;
         margin-bottom: 8px;
     }
@@ -322,7 +325,7 @@
   p {
     text-align: left;
   }
-  @media(max-width:992px){
+  @include pad{
     padding: 40px 0;
   }
 }
