--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,7 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Roboto:ital,wght@0,400;1,900&display=swap");
 
 
-
   /*text*/
   h1, h2, h3, h4{
     color:#650300;
@@ -29,21 +28,20 @@
     margin-bottom: 8px;
   }
 
-  @media (max-width:767px){
+  @include mobile{
     h1,h2{
       font-size: 24px;
     }
-
   }
 
     /*card-list*/
 .card-list{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 24px;
-    @media(max-width:992px){
+    @mixin pad{
         width: 100%;
-        flex-wrap: wrap;
       }
   }
   
