--- a/scss/pages/_sunglasses.scss
+++ b/scss/pages/_sunglasses.scss
@@ -10,6 +10,10 @@
             border-bottom: 8px solid #AA0601;
             }
     }
+    .sunglasses{
+        border-bottom: 8px solid #AA0601;
+    }
+
     a{
         font-size: 32px;
         font-weight: bold;
@@ -134,6 +138,11 @@
             background: #AA0601;
         }
     }
+.page1{
+    color: #fff;
+    background: #AA0601;
+}
+
     .border-right{
         border-right: 1px solid #555555;
     }
